--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -64,6 +64,7 @@
 
 body {
   min-height: 100vh;
+  max-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
   transition:
